fix bottom white space of table inside contentblock

--- a/src/components/Typography/typography.scss
+++ b/src/components/Typography/typography.scss
@@ -140,7 +140,8 @@ p,
 blockquote,
 pre,
 ul,
-ol {
+ol,
+table {
     .#{$eccgui}-typography__contentblock &,
     &.#{$eccgui}-typography__text {
         &:not(:last-child) {
